# FormationHNCA

./: .gitignore  CLAUDE.md  HNCA_GUIDE.md  JAX_PERFORMANCE.md  NAMING.md  pyproject.toml
notebooks/: 01_training.ipynb  02_evaluation.ipynb  03_visualization.ipynb  _legacy_01_training.ipynb  phase1_line_formation.ipynb  phase2_advection.ipynb  phase2_formation_transitions.ipynb
src/battle_nca/: __init__.py
src/battle_nca/combat/: __init__.py  channels.py  formations.py  losses.py
src/battle_nca/core/: __init__.py  advection.py  nca.py  perceive.py  update.py
src/battle_nca/hierarchy/: __init__.py  advection_nca.py  child_nca.py  hnca.py  parent_nca.py
src/battle_nca/training/: __init__.py  optimizers.py  pool.py  trainer.py
src/battle_nca/utils/: __init__.py  metrics.py  visualization.py
